changed copyright stuff

--- a/insult-generator/index.html
+++ b/insult-generator/index.html
@@ -68,7 +68,7 @@
       </article>
     </article>
 
-    <footer> <h2>closing statement and copyright bullshit</h2> </footer>
+    <footer> <h2>copyright 2017 - all rights reserved - domain name</h2> </footer>
 
   </body>
 </html>
