--- a/insult-generator/index.html
+++ b/insult-generator/index.html
@@ -13,11 +13,11 @@
       </div>
           <nav>
             <div class="navstuff">
-              <a>HOME </a>
-              <a>ABOUT </a>
-              <a>SERVICES </a>
-              <a>BLOG </a>
-              <a>CONTACT </a>
+              <a href="#">HOME </a>
+              <a href="#">ABOUT </a>
+              <a href="#">SERVICES </a>
+              <a href="#">BLOG </a>
+              <a href="#">CONTACT </a>
             </div>
           </nav>
     </header>
